@@ -18,6 +18,7 @@ import org.eclipse.swt.layout.GridData;
 import org.eclipse.swt.layout.GridLayout;
 import org.eclipse.swt.widgets.Button;
 import org.eclipse.swt.widgets.Composite;
+import org.eclipse.swt.widgets.DirectoryDialog;
 import org.eclipse.swt.widgets.Display;
 import org.eclipse.swt.widgets.Group;
 import org.eclipse.swt.widgets.Label;
@@ -26,11 +27,10 @@ import org.eclipse.ui.IWorkbench;
 import org.eclipse.ui.IWorkbenchPreferencePage;
 
 /**
- * Implements a preference page (Windows->Preferences->OCaml->Paths) that allows the user to
- * parameter the paths of the O'Caml tools (compilers, toplevel, documentation generator...)
+ * Implements a preference page (Windows->Preferences->OCaml->Paths) that allows the user to parameter the
+ * paths of the O'Caml tools (compilers, toplevel, documentation generator...)
  */
-public class PathsPreferencePage extends FieldEditorPreferencePage implements
-		IWorkbenchPreferencePage {
+public class PathsPreferencePage extends FieldEditorPreferencePage implements IWorkbenchPreferencePage {
 
 	public PathsPreferencePage() {
 		super(FieldEditorPreferencePage.GRID);
@@ -49,7 +49,7 @@ public class PathsPreferencePage extends FieldEditorPreferencePage implements
 	FileFieldEditor camlp4Field;
 	FileFieldEditor ocamlbuildField;
 	FileFieldEditor omakeField;
-	
+
 	BooleanFieldEditor ocamlbuildPathsOverride;
 
 	Text pathText;
@@ -60,7 +60,7 @@ public class PathsPreferencePage extends FieldEditorPreferencePage implements
 
 		warningLabel = new Label(getFieldEditorParent(), SWT.NONE);
 		warningLabel.setText("You must manually recompile your projects after changing paths");
-		
+
 		Group toolsGroup = new Group(getFieldEditorParent(), SWT.NONE);
 		GridData data = new GridData();
 		data.verticalAlignment = GridData.FILL;
@@ -68,28 +68,63 @@ public class PathsPreferencePage extends FieldEditorPreferencePage implements
 		data.horizontalSpan = 3;
 		toolsGroup.setLayoutData(data);
 
-		toolsGroup
-				.setText("Ocaml tools (click on \"Change Ocaml bin folder\" to change all these paths at once)");
+		toolsGroup.setText("Ocaml tools");
 
 		Composite group = new Composite(toolsGroup, SWT.NONE);
 		GridLayout layout = new GridLayout();
-		layout.numColumns = 2;
+		layout.numColumns = 4;
 		group.setLayout(layout);
-		GridData gdata = new GridData();
-		gdata.verticalAlignment = GridData.FILL;
-		gdata.horizontalAlignment = GridData.FILL;
-		gdata.grabExcessHorizontalSpace = true;
-		gdata.horizontalSpan = 3;
+		GridData gdata = new GridData(GridData.FILL, GridData.FILL, true, false);
+		gdata.horizontalSpan = 4;
+//		gdata.verticalAlignment = GridData.FILL;
+//		gdata.horizontalAlignment = GridData.FILL;
+//		gdata.grabExcessHorizontalSpace = true;
+//		gdata.horizontalSpan = 3;
 		group.setLayoutData(gdata);
 
 		// group.setLayoutData(new GridData(SWT.FILL, SWT.TOP, false, false));
 
-		final Button applyPath = new Button(group, SWT.PUSH);
-		applyPath.setText("Change Ocaml bin folder");
+		final Label binLabel = new Label(group, SWT.NONE);
+		binLabel.setText("O'Caml Binaries Directory:");
+		GridData binLabelData = new GridData();
+		binLabelData.horizontalSpan = 4;
+		binLabel.setLayoutData(binLabelData);
+
+		// final Label rootLabel = new Label(group, SWT.NONE);
+		// rootLabel.setText("Root:");
+
+		IPath path = new Path(OcamlPlugin.getOcamlcFullPath());
+		path = path.removeLastSegments(1);
+		final String currentOcamlPath = path.toOSString();
+
 		pathText = new Text(group, SWT.SINGLE | SWT.BORDER);
 		pathText.setLayoutData(new GridData(SWT.FILL, SWT.TOP, true, true));
+		pathText.setText(currentOcamlPath);
 
-		applyPath.addSelectionListener(new SelectionAdapter() {
+		final Button browseButton = new Button(group, SWT.PUSH);
+		browseButton.setText("Browse...");
+		// GridData browseButtonData = new GridData(75,25);
+		// browseButton.setLayoutData(browseButtonData);
+		browseButton.addSelectionListener(new SelectionAdapter() {
+			@Override
+			public void widgetSelected(SelectionEvent e) {
+				DirectoryDialog dialog = new DirectoryDialog(browseButton.getShell());
+				dialog.setText("Select Directory");
+				dialog.setMessage("Select O'Caml Binaries Directory");
+				dialog.setFilterPath(currentOcamlPath);
+				String dir = dialog.open();
+				if (dir != null)
+					pathText.setText(dir);
+			}
+		});
+
+		final Button applyButton = new Button(group, SWT.PUSH);
+		applyButton.setText("Apply");
+		GridData applyButtonData = new GridData();
+		applyButtonData.widthHint = 60;
+		applyButton.setLayoutData(applyButtonData);
+
+		applyButton.addSelectionListener(new SelectionAdapter() {
 			@Override
 			public void widgetSelected(SelectionEvent e) {
 				applyPathPrefix();
@@ -97,44 +132,39 @@ public class PathsPreferencePage extends FieldEditorPreferencePage implements
 
 		});
 
-		IPath path = new Path(OcamlPlugin.getOcamlcFullPath());
-		path = path.removeLastSegments(1);
-		pathText.setText(path.toOSString());
-		
-		ocamlbuildPathsOverride = new BooleanFieldEditor(PreferenceConstants.P_OCAMLBUILD_COMPIL_PATHS_OVERRIDE, "Override default ocamlbuild paths",
+		ocamlbuildPathsOverride = new BooleanFieldEditor(
+				PreferenceConstants.P_OCAMLBUILD_COMPIL_PATHS_OVERRIDE, "Override default ocamlbuild paths",
 				toolsGroup);
 		this.addField(ocamlbuildPathsOverride);
-	
-		ocamlField = new FileFieldEditor(PreferenceConstants.P_COMPIL_PATH_OCAML, "oca&ml:",
-				toolsGroup);
+
+		ocamlField = new FileFieldEditor(PreferenceConstants.P_COMPIL_PATH_OCAML, "oca&ml:", toolsGroup);
 		this.addField(ocamlField);
 
-		ocamlcField = new FileFieldEditor(PreferenceConstants.P_COMPIL_PATH_OCAMLC, "ocaml&c:",
-				toolsGroup);
+		ocamlcField = new FileFieldEditor(PreferenceConstants.P_COMPIL_PATH_OCAMLC, "ocaml&c:", toolsGroup);
 		this.addField(ocamlcField);
 
-		ocamloptField = new FileFieldEditor(PreferenceConstants.P_COMPIL_PATH_OCAMLOPT,
-				"ocaml&opt:", toolsGroup);
+		ocamloptField = new FileFieldEditor(PreferenceConstants.P_COMPIL_PATH_OCAMLOPT, "ocaml&opt:",
+				toolsGroup);
 		this.addField(ocamloptField);
 
-		ocamldepField = new FileFieldEditor(PreferenceConstants.P_COMPIL_PATH_OCAMLDEP,
-				"ocaml&dep:", toolsGroup);
+		ocamldepField = new FileFieldEditor(PreferenceConstants.P_COMPIL_PATH_OCAMLDEP, "ocaml&dep:",
+				toolsGroup);
 		this.addField(ocamldepField);
 
-		ocamllexField = new FileFieldEditor(PreferenceConstants.P_COMPIL_PATH_OCAMLLEX,
-				"ocamlle&x:", toolsGroup);
+		ocamllexField = new FileFieldEditor(PreferenceConstants.P_COMPIL_PATH_OCAMLLEX, "ocamlle&x:",
+				toolsGroup);
 		this.addField(ocamllexField);
 
-		ocamlyaccField = new FileFieldEditor(PreferenceConstants.P_COMPIL_PATH_OCAMLYACC,
-				"ocaml&yacc:", toolsGroup);
+		ocamlyaccField = new FileFieldEditor(PreferenceConstants.P_COMPIL_PATH_OCAMLYACC, "ocaml&yacc:",
+				toolsGroup);
 		this.addField(ocamlyaccField);
 
-		ocamldocField = new FileFieldEditor(PreferenceConstants.P_COMPIL_PATH_OCAMLDOC,
-				"oc&amldoc:", toolsGroup);
+		ocamldocField = new FileFieldEditor(PreferenceConstants.P_COMPIL_PATH_OCAMLDOC, "oc&amldoc:",
+				toolsGroup);
 		this.addField(ocamldocField);
 
-		ocamldebugField = new FileFieldEditor(PreferenceConstants.P_COMPIL_PATH_OCAMLDEBUG,
-				"ocamldebu&g:", toolsGroup);
+		ocamldebugField = new FileFieldEditor(PreferenceConstants.P_COMPIL_PATH_OCAMLDEBUG, "ocamldebu&g:",
+				toolsGroup);
 		this.addField(ocamldebugField);
 
 		camlp4Field = new FileFieldEditor(PreferenceConstants.P_PATH_CAMLP4, "camlp4:", toolsGroup);
@@ -155,8 +185,9 @@ public class PathsPreferencePage extends FieldEditorPreferencePage implements
 
 		this.addField(new FileFieldEditor(PreferenceConstants.P_MAKE_PATH, "make:", otherGroup));
 		this.addField(new FileFieldEditor(PreferenceConstants.P_OMAKE_PATH, "omake:", otherGroup));
-		this.addField(new DirectoryFieldEditor(PreferenceConstants.P_LIB_PATH, "OCaml &lib path:",
-				otherGroup));
+		this
+				.addField(new DirectoryFieldEditor(PreferenceConstants.P_LIB_PATH, "OCaml &lib path:",
+						otherGroup));
 
 	}
 
@@ -172,15 +203,57 @@ public class PathsPreferencePage extends FieldEditorPreferencePage implements
 			path = path + File.separator;
 
 		if (Platform.getOS().equals(Platform.OS_WIN32)) {
-			ocamlField.setStringValue(path + "ocaml.exe");
-			ocamlcField.setStringValue(path + "ocamlc.exe");
-			ocamloptField.setStringValue(path + "ocamlopt.exe");
-			ocamldepField.setStringValue(path + "ocamldep.exe");
-			ocamllexField.setStringValue(path + "ocamllex.exe");
-			ocamlyaccField.setStringValue(path + "ocamlyacc.exe");
-			ocamldocField.setStringValue(path + "ocamldoc.exe");
-			camlp4Field.setStringValue(path + "camlp4.exe");
-			ocamlbuildField.setStringValue(path + "ocamlbuild.exe");
+
+			if (new File(path + "ocaml.exe").exists())
+				ocamlField.setStringValue(path + "ocaml.exe");
+			else
+				ocamlField.setStringValue("");
+
+			if (new File(path + "ocamlc.exe").exists())
+				ocamlcField.setStringValue(path + "ocamlc.exe");
+			else
+				ocamlcField.setStringValue("");
+
+			if (new File(path + "ocamlopt.exe").exists())
+				ocamloptField.setStringValue(path + "ocamlopt.exe");
+			else
+				ocamloptField.setStringValue("");
+
+			if (new File(path + "ocamldep.exe").exists())
+				ocamldepField.setStringValue(path + "ocamldep.exe");
+			else
+				ocamldepField.setStringValue("");
+
+			if (new File(path + "ocamllex.exe").exists())
+				ocamllexField.setStringValue(path + "ocamllex.exe");
+			else
+				ocamllexField.setStringValue("");
+
+			if (new File(path + "ocamlyacc.exe").exists())
+				ocamlyaccField.setStringValue(path + "ocamlyacc.exe");
+			else
+				ocamlyaccField.setStringValue("");
+
+			if (new File(path + "ocamldoc.exe").exists())
+				ocamldocField.setStringValue(path + "ocamldoc.exe");
+			else
+				ocamldocField.setStringValue("");
+
+			if (new File(path + "camlp4.exe").exists())
+				camlp4Field.setStringValue(path + "camlp4.exe");
+			else
+				camlp4Field.setStringValue("");
+
+			if (new File(path + "ocamlbuild.exe").exists())
+				ocamlbuildField.setStringValue(path + "ocamlbuild.exe");
+			else
+				ocamlbuildField.setStringValue("");
+
+			if (new File(path + "ocamldebug.exe").exists())
+				ocamldebugField.setStringValue(path + "ocamldebug.exe");
+			else
+				ocamldebugField.setStringValue("");
+
 			return;
 		}
 
