@@ -114,7 +114,9 @@
 	* Simplified synchronization in Ocamlbuild builder
 	* Replaced linked external resources by uses of the new Eclipse File System API to open workspace-external files in editors. This means no more ".DebuggerSourceLookup" and ".HyperlinksLinkedFiles", which should also fix incompatibility with eclipsedarcs.
 	* Opening a module's/interface's counterpart now works on external resources
-	* Fixed a layout issue in paths properties page
+	* Fixed a layout issue in project paths properties page
+	* Improved O'Caml paths preference page
+	* Removed a check that prevented using the Cygwin version of ocamldebug on Windows
 	
 	
 	
